Migrate build to AGP built-in Kotlin